--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,11 @@
 {
   "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": 6.10,
-          "uglify": true
-        }
-      }
-    ]
+    "stage-0",
+    "es2015"
   ],
   "plugins": [
+    ["transform-runtime", { "helpers": false, "polyfill": false, "regenerator": true }],
+    "transform-async-to-generator",
     "add-module-exports",
     "transform-object-rest-spread"
   ],
