--- a/package.json
+++ b/package.json
@@ -1,46 +1,63 @@
 {
-  "name": "ks-tf-github-webhooks",
+  "name": "tf-github-webhooks",
   "version": "1.2.0",
   "description": "tf project for codebuild webhook infrastructure",
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dist/* && webpack",
-    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/.bin/_mocha test/tests/integration/bootstrap.test.js test/tests/**/*.test.js",
-    "release": "npm run build && standard-version",
-    "test": "mocha --recursive --compilers js:babel-register --require babel-polyfill test/tests/**/*.test.js",
-    "unit": "mocha --recursive --compilers js:babel-register --require babel-polyfill test/tests/unit/**/*.test.js"
+    "coverage": "nyc --reporter=lcov npm test",
+    "lint": "eslint ./src ./test",
+    "postversion": "npm run build",
+    "release": "standard-version",
+    "sec": "nsp check",
+    "test": "mocha --recursive --exit test/tests/*.test.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cludden/ks-tf-github-webhooks.git"
+    "url": "git+https://github.com/cludden/tf-github-webhooks.git"
   },
   "author": "chris ludden",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/cludden/ks-tf-github-webhooks/issues"
+    "url": "https://github.com/cludden/tf-github-webhooks/issues"
   },
-  "homepage": "https://github.com/cludden/ks-tf-github-webhooks#readme",
+  "homepage": "https://github.com/cludden/tf-github-webhooks#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-istanbul": "^0.12.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-async-to-generator": "https://registry.npmjs.org/babel-plugin-transform-async-to-generator/-/babel-plugin-transform-async-to-generator-6.24.1.tgz",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "chai": "^3.5.0",
+    "bluebird": "^3.5.1",
+    "chai": "^4.1.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.3.0",
-    "sinon": "^2.2.0",
+    "mocha": "^4.0.1",
+    "nsp": "^2.8.1",
+    "nyc": "^11.3.0",
+    "sinon": "^4.1.1",
     "standard-version": "^4.0.0",
     "webpack": "^2.5.1"
   },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "temp-directory": "./coverage/.nyc_output"
+  },
   "dependencies": {
-    "aws-sdk": "^2.50.0",
-    "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.17.4.tgz"
+    "app-container": "^1.0.0",
+    "aws-sdk": "^2.145.0",
+    "bunyan": "^1.8.12",
+    "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.17.4.tgz",
+    "source-map-support": "https://registry.npmjs.org/source-map-support/-/source-map-support-0.4.15.tgz"
   }
 }
