feat(ENG-16274): get project building
updating webpack and babel to get it up-to-date, eliminate unneeded configuration/deps, and get the project building
fixing linting issues
updating docker-compose.yml and Dockerfile.test to be in line with calibration projects
adding .nycrc.json for more consistent configuration
updating tf to include more variables, s3 backend, and a temp file to separate infrastructure creation from the lambda build
updating lambda runtime in tf to node12
adding buildspec.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3.5'
 services:
   tf-github-webhooks:
     build:
@@ -16,5 +16,5 @@ services:
       NODE_ENV: test
       SNS_TOPIC_ARN: 'abcdefg'
     volumes:
-      - ./:/home/app/src
-      - /home/app/src/node_modules
+      - ./:/home/app
+        - /home/app/node_modules
