feat(ENG-16274): fix artifacts path
fixing artifacts path since dist is relative to the current directory

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,5 +15,5 @@ phases:
 
 artifacts:
   files:
-    - "/dist/tf-github-webhooks.zip"
+    - "dist/tf-github-webhooks.zip"
   name: tf-github-webhooks-$BUILD_TAG.zip
