feat(ENG-16274): change artifact name
changing artifact name to be prefixed with project name

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,4 @@ phases:
 artifacts:
   files:
     - "dist/tf-github-webhooks.zip"
-  name: tf-github-webhooks-$BUILD_TAG.zip
+  name: tf-github-webhooks/tf-github-webhooks-$BUILD_TAG.zip
