feat(ENG-16274): change artifact name
changing artifact name to just include the build tag
attempting to not discard paths so that we can have the artifacts in "folders" for each project

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,5 @@ phases:
 artifacts:
   files:
     - "dist/tf-github-webhooks.zip"
-  name: tf-github-webhooks/tf-github-webhooks-$BUILD_TAG.zip
+  name: tf-github-webhooks-$BUILD_TAG.zip
+  discard-paths: no
