feat(ENG-16274): remove artifact rename
removing builtin artifact rename since it isn't playing nice with the override_artifact_name in terraform
re-adding discard-paths

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,9 +12,11 @@ phases:
   build:
     commands:
       - npm run build
+  post_build:
+    commands:
+      - mv dist/tf-github-webhooks.zip dist/tf-github-webhooks-$BUILD_TAG.zip
 
 artifacts:
   files:
-    - "dist/tf-github-webhooks.zip"
-  name: tf-github-webhooks-$BUILD_TAG.zip
-  discard-paths: no
+    - "dist/*.zip"
+  discard-paths: yes
