feat(ENG-16274): fix builds and terraform
removing unneeded tf vars
adding new tf vars
adding labels for tf resources
fixing references in tf
updating buildspec to no longer use the artifacts block
updating buildspec to pubish to s3 on PR merge and then kick off the lambda publish build via publish-lambda.sh
adding buildspec.publish.yml to publish the lambda

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,14 +9,11 @@ phases:
       - HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
       - BUILD_TAG=$(date +%Y-%m-%d.%H%M%S%3N)-$HASH
       - npm install
+      - PACKAGE_FILE=tf-github-webhooks-$BUILD_TAG
   build:
     commands:
       - npm run build
   post_build:
     commands:
-      - mv dist/tf-github-webhooks.zip dist/tf-github-webhooks-$BUILD_TAG.zip
-
-artifacts:
-  files:
-    - "dist/*.zip"
-  discard-paths: yes
+      - mv dist/tf-github-webhooks.zip dist/$PACKAGE_FILE.zip
+      - ./publish-lambda.sh
