--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,11 +9,11 @@ phases:
       - HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
       - BUILD_TAG=$(date +%Y-%m-%d.%H%M%S%3N)-$HASH
       - npm install
-      - PACKAGE_FILE=tf-github-webhooks-$BUILD_TAG
+      - PACKAGE_FILE=tf-github-webhooks-$BUILD_TAG.zip
   build:
     commands:
       - npm run build
   post_build:
     commands:
-      - mv dist/tf-github-webhooks.zip dist/$PACKAGE_FILE.zip
+      - mv dist/tf-github-webhooks.zip dist/$PACKAGE_FILE
       - ./publish-lambda.sh
