feat(ENG-16274): fix runtime problems
changing config.js to match tf-codebuild-triggers config.js
renaming config env var in terraform
refactoring test stubbing to reflect the correct format of the config
removing uneeded env vars from docker-compose.yml and adding correct config env var
fixing how we access vars from the config
changing log.js to match tf-codebuild-triggers log.js
fixing how we access the logger
adding specific lodash deps
removing unneeded dependency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,7 @@ services:
       dockerfile: ./test/Dockerfile.test
     command: npm run coverage
     environment:
-      AWS_ACCESS_KEY_ID: xxxxx
-      AWS_REGION: us-west-2
-      AWS_SECRET_ACCESS_KEY: xxxxx
-      CONFIG_PREFIX: /foo
+      CONFIG_PARAMETER_NAMES: foo,bar
       #DEBUG: app-container*
       GITHUB_SECRET: SECRET
       LOG_LEVEL: fatal
